Closure_73/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_73_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:49: error: cannot find symbol
      String string0 = CodeGenerator.escapeToDoubleQuotedJsString("\t\n\u000B\f\r \u0085\u1680\u2028\u2029Q\u205F\u3000\u00A0\u180E\u202F");
                                    ^
  symbol:   method escapeToDoubleQuotedJsString(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:75: error: cannot find symbol
        codeGenerator0.tagAsStrict();
                      ^
  symbol:   method tagAsStrict()
  location: variable codeGenerator0 of type CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:122: error: constructor CodeGenerator in class CodeGenerator cannot be applied to given types;
      CodeGenerator codeGenerator0 = new CodeGenerator((CodeConsumer) null, charset0);
                                     ^
  required: CodeConsumer
  found: CodeConsumer,Charset
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:128: error: constructor CodeGenerator in class CodeGenerator cannot be applied to given types;
      CodeGenerator codeGenerator0 = new CodeGenerator((CodeConsumer) null, charset0);
                                     ^
  required: CodeConsumer
  found: CodeConsumer,Charset
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:133: error: cannot find symbol
      double double0 = CodeGenerator.getSimpleNumber("6");
                                    ^
  symbol:   method getSimpleNumber(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:139: error: cannot find symbol
      double double0 = CodeGenerator.getSimpleNumber("8%\"");
                                    ^
  symbol:   method getSimpleNumber(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:145: error: cannot find symbol
      double double0 = CodeGenerator.getSimpleNumber("q");
                                    ^
  symbol:   method getSimpleNumber(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:151: error: cannot find symbol
      double double0 = CodeGenerator.getSimpleNumber("");
                                    ^
  symbol:   method getSimpleNumber(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:161: error: cannot find symbol
        codeGenerator0.addArrayList(node0);
                      ^
  symbol:   method addArrayList(Node)
  location: variable codeGenerator0 of type CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:221: error: method jsString in class CodeGenerator cannot be applied to given types;
      String string0 = CodeGenerator.jsString("method \"{0}\" called with more than one argument", (CharsetEncoder) null);
                                    ^
  required: String
  found: String,CharsetEncoder
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:227: error: method jsString in class CodeGenerator cannot be applied to given types;
      String string0 = CodeGenerator.jsString("x:ESxG#9}i/J$fp';d", (CharsetEncoder) null);
                                    ^
  required: String
  found: String,CharsetEncoder
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:235: error: method strEscape in class CodeGenerator cannot be applied to given types;
      String string0 = CodeGenerator.strEscape("\n\ndeprecated\u0018\u0003 \u0001(\b:\u0005false\u0012\u001C\n\u0014experimental_map_key\u0018\t \u0001(\t\u0012C\n\u0014uninterpreted_option\u0018\u00E7\u0007 \u0003(\u000B2$.google.protobuf.UninterpretedOption\"/\n\u0005CType\u0012\n\n\u0006STRING\u0010\u0000\u0012\b\n\u0004CORD\u0010\u0001\u0012\u0010\n\fSTRING_PIECE\u0010\u0002*\t\b\u00E8\u0007\u0010\u0080\u0080\u0080\u0080\u0002\"]\n\u000BEnumOptions\u0012C\n\u0014uninterpreted_option\u0018\u00E7\u0007 \u0003(\u000B2$.google.protobuf.UninterpretedOption*\t\b\u00E8\u0007\u0010\u0080\u0080\u0080\u0080\u0002\"b\n\u0010EnumValueOptions\u0012C\n\u0014uninterpreted_option\u0018\u00E7\u0007 \u0003(\u000B2$.google.protobuf.UninterpretedOption*\t\b\u00E8\u0007\u0010\u0080\u0080\u0080\u0080\u0002\"`\n\u000EServiceOptions\u0012C\n", 'B', "=MqZE~2", "=MqZE~2", "=MqZE~2", charsetEncoder0);
                                    ^
  required: String,char,String,String,String
  found: String,char,String,String,String,CharsetEncoder
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:241: error: cannot find symbol
      String string0 = CodeGenerator.escapeToDoubleQuotedJsString("</ul><!-->");
                                    ^
  symbol:   method escapeToDoubleQuotedJsString(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:249: error: method strEscape in class CodeGenerator cannot be applied to given types;
      String string0 = CodeGenerator.strEscape("k\t\u000Bg!-'\u202F", '9', "k\t\u000Bg!-'\u202F", "k\t\u000Bg!-'\u202F", "k\t\u000Bg!-'\u202F", charsetEncoder0);
                                    ^
  required: String,char,String,String,String
  found: String,char,String,String,String,CharsetEncoder
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:261: error: cannot find symbol
      String string0 = CodeGenerator.escapeToDoubleQuotedJsString("Z->//6");
                                    ^
  symbol:   method escapeToDoubleQuotedJsString(String)
  location: class CodeGenerator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_73/Closure/evosuite/3/com/google/javascript/jscomp/CodeGenerator_ESTest.java:267: error: cannot find symbol
      String string0 = CodeGenerator.escapeToDoubleQuotedJsString("Z]>//6");
                                    ^
  symbol:   method escapeToDoubleQuotedJsString(String)
  location: class CodeGenerator
16 errors
